Add Android compatible Base64 encoding library